Fixing spacing on edge of iFrames

--- a/styles/index.less
+++ b/styles/index.less
@@ -1416,6 +1416,7 @@
   iframe {
     width: 100%;
     border: 0px;
+    border-right: 9px solid #000;
     box-shadow: 5px 5px 0 rgba(26, 26, 26, .7);
     overflow: hidden;
     height: 142px;
